# SDL2-CMake-Platformer

./: CMakeLists.txt  README.md
config/: window_init.json
include/: BackgroundLayer.h  Camera.h  Entity.h  Game.h  GameObject.h  Header.h  Player.h  TextManager.h  TextureManager.h  Tilemap.h  Vector2.h  WindowManager.h
ressources/map/: map.json  map1.json  map2.json
sources/: main.cpp
sources/Core/: Game.cpp  Game.h
sources/Entities/: BackgroundLayer.cpp  BackgroundLayer.h  Camera.cpp  Camera.h  GameObject.h  Player.h  Tilemap.h
sources/Render/: RenderWindow.cpp  RenderWindow.h  TextManager.cpp  TextManager.h  TextureManager.h
sources/Utils/: Header.h
src/: BackgroundLayer.cpp  Camera.cpp  Game.cpp  Player.cpp  TextureManager.cpp  Tilemap.cpp  WindowManager.cpp  main.cpp
